--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ main {
     /* vertically */
     justify-content: center;
     /* horizontally */
-    width: 1000px;
-    margin: 10px;
-    font-size: 40px;
+    width: 50%;
+    margin: 1%;
+    font-size: 2rem;
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
